...
            if (!response.hasErrors()) {
                Result.Success(
                    response.dataAssertNoErrors.pokemon.map { model ->
                        val detail = model.detail.first()
                        val stats = detail.stats.map { it.base_stat }

                        Pokemon(
                            id = model.id,
                            name = model.name,
                            description = model.description.first().flavor_text,
                            typeOfPokemon = detail.types.map { it.type!!.name },
                            category = model.species[0].genus,
                            image = model.id,
...
